tests/baselines/reference/targetTypeVoidFunc.errors.txt
targetTypeVoidFunc.ts(2,5): error TS2322: Type '() => void' is not assignable to type 'new () => number'.
  Type '() => void' provides no match for the signature 'new (): number'.


==== targetTypeVoidFunc.ts (1 errors) ====
    function f1(): { new (): number; } {
        return function () { return; }
        ~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'new () => number'.
!!! error TS2322:   Type '() => void' provides no match for the signature 'new (): number'.
    }; 
    
    var x = f1();
    var y = new x();
    var z = new (f1())();